# rat-defender-v2

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Cross.toml  Directory.Build.props  Project.sln  bun.lockb  docker-compose.dev.yaml  docker-compose.prod.yaml  package.json  turbo.json
apps-excluded/ts/rp-app/: app.json  eas.json  package-lock.json  package.json
apps-excluded/ts/rp-app/api/: hooks.ts  index.ts  mcu.ts
apps-excluded/ts/rp-app/api/mutator/: custom-fetch.ts
apps-excluded/ts/rp-app/app/: +not-found.tsx  _layout.tsx
apps-excluded/ts/rp-app/app/(onboard)/: index.tsx
apps-excluded/ts/rp-app/app/(tabs)/: _layout.tsx  explore.tsx  history.tsx  index.tsx  info.tsx
apps-excluded/ts/rp-app/components/: LoadingScreen.tsx
apps-excluded/ts/rp-app/removed/: settings.tsx
apps-excluded/ts/rp-app/store/: create-selectors.ts  index.ts
apps-excluded/ts/rp-app/utilities/: colors.ts  image.ts  temperature.ts
cargo/: .config.toml
cli/cs/WebApiCli/: WebApiCli.csproj  package.json
cli/cs/WebApiCli/src/: Program.cs
cli/cs/WebApiCli/src/Commands/: CreateEntityCommands.cs  DatabaseCommands.cs
cli/rs/uniffi-bindgen/: Cargo.toml
docker/app/: Dockerfile
docker/cli/: Dockerfile
docker/cross-compile/: Dockerfile
docker/cross-compile/scripts/: install-opencv.sh  install-tools.sh  install.sh
scripts/bun/strip-utf8-bom/: build.ts  package.json  tsconfig.json
scripts/bun/strip-utf8-bom/src/: index.ts
services/cs/Server/: .gitignore  Server.csproj  appsettings.Development.json  appsettings.json  package.json
services/cs/Server/Properties/: launchSettings.json
services/cs/Server/src/: Program.cs
services/cs/Server/src/Extension/: OpenApiScalarUiExtension.cs
(+3 files in other folders)
